--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frontend data</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
-    <h1>ayoo</h1>
+    <h1>Circle wiwiwiiwiw</h1>
+    <div class="circle">
+    <!-- https://wattenberger.com/guide/scaling-svg -->
+        <svg width="100%" height="100%">
+            <!-- <circle r="20" cx="100" cy="100"></circle>
+            <circle r="10" cx="100" cy="100" fill="red"></circle> -->
+        </svg>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="index.js"></script>
 </body>
 </html>
+
+<!-- https://www.sgratzl.com/d3tutorial/ -->
+
+<!-- https://github.com/sgratzl/d3tutorial/blob/main/README.md#dev-environment  -->
+<!-- Basis van D3 door samuel, met vele voorbeelden en voorbeeld code klik opde codepen shields voor voorbeelden-->
+
+<!-- https://addons.mozilla.org/en-US/firefox/addon/access-control-allow-origin/ -->
