--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
-    <h1>Circle wiwiwiiwiw</h1>
-    <div class="circle">
+    <h1>Barchart tutorial</h1>
     <!-- https://wattenberger.com/guide/scaling-svg -->
-        <svg width="100%" height="100%">
+        <svg width="300" height="300">
             <!-- <circle r="20" cx="100" cy="100"></circle>
             <circle r="10" cx="100" cy="100" fill="red"></circle> -->
         </svg>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="index.js"></script>
 </body>
