--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Barchart tutorial</h1>
     <!-- https://wattenberger.com/guide/scaling-svg -->
-
+    <svg></svg>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="index.js"></script>
 </body>
