testing pie chart genders

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Barchart tutorial</h1>
+    <svg id="gender"></svg>
     <!-- https://wattenberger.com/guide/scaling-svg -->
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
