--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend data</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="static/style.css" />
+  </head>
+  <body>
     <h1>Barchart tutorial</h1>
     <svg id="gender"></svg>
     <!-- https://wattenberger.com/guide/scaling-svg -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="index.js"></script>
-</body>
+    <script type="module" src="scripts/index.js"></script>
+  </body>
 </html>
 
 <!-- https://www.sgratzl.com/d3tutorial/ -->
