:sparkles: pie chart

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" type="text/css" href="static/style.css" />
   </head>
   <body>
-    <h1>Barchart tutorial</h1>
-    <svg id="gender"></svg>
-    <!-- https://wattenberger.com/guide/scaling-svg -->
+    <h1>Pie chart</h1>
+    <g>
+      <label><input type="radio">gender</label>
+      <label><input type="radio">house</label>
+    </g>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script type="module" src="scripts/index.js"></script>
   </body>
-</html>
-
+  </html>
+  
+  <!-- https://wattenberger.com/guide/scaling-svg -->
 <!-- https://www.sgratzl.com/d3tutorial/ -->
-
 <!-- https://github.com/sgratzl/d3tutorial/blob/main/README.md#dev-environment  -->
 <!-- Basis van D3 door samuel, met vele voorbeelden en voorbeeld code klik opde codepen shields voor voorbeelden-->
-
 <!-- https://addons.mozilla.org/en-US/firefox/addon/access-control-allow-origin/ -->
