:construction: eventlistner radio buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <h1>Pie chart</h1>
-    <g>
-      <label><input type="radio">gender</label>
-      <label><input type="radio">house</label>
-    </g>
+    <div id="radioButton">
+      <label><input type="radio"  name="grp1" value="gender" >gender</label>
+      <label><input type="radio" name="grp1" value="house">house</label>
+    <div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script type="module" src="scripts/index.js"></script>
   </body>
