--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   </head>
   <body>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <h1>Pie chart</h1>
-    <div id="radioButton">
-      <label><input type="radio"  name="grp1" value="gender">gender</label>
-      <label><input type="radio" name="grp1" value="house">house</label>
-    <div>
+    <h1>idk wubbadubbadubdub</h1>
+    
     <script type="module" src="scripts/index.js"></script>
   </body>
   </html>
